<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.training.lsouza.social.ChooseSocialActivity"
    android:id="@+id/chooseSocialActivity">

    <RadioGroup
        android:id="@+id/groupSocial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rd_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radioSex"
            android:checked="false"
            android:text="@string/lblSocial_facebook" />

        <RadioButton
            android:id="@+id/rd_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rd_facebook"
            android:text="@string/lblSocial_twitter"
            android:checked="false" />

        <RadioButton
            android:id="@+id/rd_gplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rd_facebook"
            android:text="@string/lbSocial_gplus"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:id="@+id/btn_saveChoice"
        android:layout_below="@+id/groupSocial"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
