<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.training.lsouza.social.ResultActivity">

    <TextView android:text="@string/lblName" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_nameResult"
        android:layout_below="@+id/lblName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="Name Result" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSocial"
        android:id="@+id/textView_lblSocial_result"
        android:layout_below="@+id/textView_nameResult"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Social Result"
        android:id="@+id/textView_socialResul"
        android:layout_below="@+id/textView_lblSocial_result"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_notifications"
        android:id="@+id/textView"
        android:layout_below="@+id/textView_socialResul"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Get notifications result"
        android:id="@+id/textView_resultNotifications"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
